--- a/popup.html
+++ b/popup.html
@@ -281,6 +281,7 @@
             color: white;
             cursor: pointer;
             font-size: 14px;
+            transition: background-color 0.3s ease;
         }
 
         .action-button:hover {
@@ -351,6 +352,57 @@
         .companies-table a:hover {
             text-decoration: underline;
         }
+
+        .companies-table th:last-child,
+        .companies-table td:last-child {
+            width: 40px;
+            text-align: center;
+        }
+
+        .delete-btn {
+            color: #dc3545;
+            background: none;
+            border: none;
+            cursor: pointer;
+            font-size: 18px;
+            padding: 4px 8px;
+            border-radius: 4px;
+            transition: background-color 0.2s;
+        }
+
+        .delete-btn:hover {
+            background-color: rgba(220, 53, 69, 0.1);
+        }
+
+        .companies-table td {
+            vertical-align: middle;
+        }
+
+        .metric-link {
+            color: #0073b1;
+            text-decoration: none;
+            display: inline-flex;
+            align-items: center;
+            gap: 4px;
+        }
+
+        .metric-link:hover {
+            text-decoration: underline;
+        }
+
+        /* Add to existing styles */
+        #addCompany {
+            transition: background-color 0.3s ease;
+        }
+
+        #addCompany.remove-company:hover {
+            background-color: #c82333;
+        }
+
+        #companiesTable {
+            display: block;
+            /* Show by default */
+        }
     </style>
     <script src="popup.js" defer></script>
 </head>
@@ -373,7 +425,8 @@
             </div>
             <div class="company-actions">
                 <button id="addCompany" class="action-button">Add Company</button>
-                <button id="showCompanies" class="action-button">Show Companies</button>
+                <button id="showCompanies" class="action-button" style="display: none;">Show Companies</button>
+                <button id="hideCompanies" class="action-button">Hide Companies</button>
             </div>
         </div>
 
@@ -386,15 +439,16 @@
             <table class="companies-table">
                 <thead>
                     <tr>
-                        <th>Company Name</th>
+                        <th>Company</th>
+                        <th>All</th>
                         <th>South America</th>
-                        <th>Actions</th>
+                        <th>D. Makers</th>
+                        <th></th>
                     </tr>
                 </thead>
                 <tbody id="companiesTableBody">
                 </tbody>
             </table>
-            <button id="hideCompanies" class="action-button">Hide Companies</button>
         </div>
 
         <div class="search-container">
