changed ids of tables

--- a/popup.html
+++ b/popup.html
@@ -122,7 +122,7 @@
             display: none;
         }
 
-        .data-table {
+        .searchResultsTable {
             margin-top: 16px;
             max-height: 450px;
             overflow-y: auto;
@@ -476,7 +476,7 @@
             <input type="text" id="searchInput" placeholder="Search by name...">
         </div>
         <div id="page-nav"></div>
-        <div class="data-table">
+        <div class="searchResultsTable">
             <table>
                 <thead>
                     <tr>
