--- a/popup.html
+++ b/popup.html
@@ -492,6 +492,24 @@
                 </tbody>
             </table>
         </div>
+
+        <div id="employeesTable" style="display: none;" class="companies-table-container">
+            <div class="table-header">
+                <h3>Employee List</h3>
+            </div>
+            <table class="companies-table">
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Title</th>
+                        <th>Location</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody id="employeesTableBody">
+                </tbody>
+            </table>
+        </div>
     </div>
 
     <div class="footer">
