employeeList table update

--- a/popup.html
+++ b/popup.html
@@ -436,6 +436,13 @@
             <button id="showRed" class="warning-button">Show Red</button>
         </div>
 
+        <!-- New buttons for employeesTable -->
+        <div id="employeeListButtons" class="button-container" style="display: none;">
+            <button id="showEmployees" class="primary-button">Show Employees</button>
+            <button id="clearEmployees" class="danger-button">Clear Employees</button>
+            <button id="showRedEmployees" class="warning-button">Show Red </button>
+        </div>
+
         <!-- Add new company info section -->
         <div id="companyInfo" style="display: none;" class="company-info">
             <h2 class="company-name"></h2>
@@ -501,8 +508,7 @@
                 <thead>
                     <tr>
                         <th>Name</th>
-                        <th>Title</th>
-                        <th>Location</th>
+                        <th>Company</th>
                         <th>Actions</th>
                     </tr>
                 </thead>
