--- a/popup.html
+++ b/popup.html
@@ -508,8 +508,8 @@
                 <thead>
                     <tr>
                         <th>Name</th>
-                        <th>Company</th>
-                        <th>Actions</th>
+                        <th>Job</th>
+                        <th>Add</th>
                     </tr>
                 </thead>
                 <tbody id="employeesTableBody">
