functioning employee export

--- a/popup.html
+++ b/popup.html
@@ -440,7 +440,8 @@
         <div id="employeeListButtons" class="button-container" style="display: none;">
             <button id="showEmployees" class="primary-button">Show Employees</button>
             <button id="clearEmployees" class="danger-button">Clear Employees</button>
-            <button id="showRedEmployees" class="warning-button">Show Red </button>
+            <button id="copyEmployees" class="secondary-button">Copy to CSV</button>
+            <button id="showRedEmployees" class="warning-button">Show Red</button>
         </div>
 
         <!-- Add new company info section -->
